[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"


[dependencies]
kmath = {path = "../../koi2/crates/kmath"}
rapier2d = "0.14.0"
once_cell = "1.17.0"
oorandom = "11.1.3"

[profile.release]
 # Consider these options for a smaller binary size
 # strip = true
 # panic = "abort"
 # opt-level = "z"  # Optimize for size.
 # lto = true
 # codegen-units = 1